update resources file

--- a/OKcupidon Data.ipynb
+++ b/OKcupidon Data.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "8e813d5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from scipy import stats\n",
     "import numpy as np\n",
@@ -16,18 +17,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "600d40f6",
+   "execution_count": 17,
+   "id": "f4ab3190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>body_type</th>\n",
+       "      <th>diet</th>\n",
+       "      <th>drinks</th>\n",
+       "      <th>drugs</th>\n",
+       "      <th>education</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>height</th>\n",
+       "      <th>income</th>\n",
+       "      <th>job</th>\n",
+       "      <th>offspring</th>\n",
+       "      <th>orientation</th>\n",
+       "      <th>pets</th>\n",
+       "      <th>religion</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>sign</th>\n",
+       "      <th>smokes</th>\n",
+       "      <th>speaks</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>a little extra</td>\n",
+       "      <td>strictly anything</td>\n",
+       "      <td>socially</td>\n",
+       "      <td>never</td>\n",
+       "      <td>working on college/university</td>\n",
+       "      <td>asian, white</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>transportation</td>\n",
+       "      <td>doesn't have kids, but might want them</td>\n",
+       "      <td>straight</td>\n",
+       "      <td>likes dogs and likes cats</td>\n",
+       "      <td>agnosticism and very serious about it</td>\n",
+       "      <td>m</td>\n",
+       "      <td>gemini</td>\n",
+       "      <td>sometimes</td>\n",
+       "      <td>english</td>\n",
+       "      <td>single</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36</td>\n",
+       "      <td>average</td>\n",
+       "      <td>mostly other</td>\n",
+       "      <td>often</td>\n",
+       "      <td>sometimes</td>\n",
+       "      <td>working on space camp</td>\n",
+       "      <td>white</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>hospitality / travel</td>\n",
+       "      <td>doesn't have kids, but might want them</td>\n",
+       "      <td>straight</td>\n",
+       "      <td>likes dogs and likes cats</td>\n",
+       "      <td>agnosticism but not too serious about it</td>\n",
+       "      <td>m</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>no</td>\n",
+       "      <td>english (fluently), spanish (poorly), french (...</td>\n",
+       "      <td>single</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>thin</td>\n",
+       "      <td>anything</td>\n",
+       "      <td>socially</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>graduated from masters program</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>straight</td>\n",
+       "      <td>has cats</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>pisces but it doesn't matter</td>\n",
+       "      <td>no</td>\n",
+       "      <td>english, french, c++</td>\n",
+       "      <td>available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>thin</td>\n",
+       "      <td>vegetarian</td>\n",
+       "      <td>socially</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>working on college/university</td>\n",
+       "      <td>white</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>student</td>\n",
+       "      <td>doesn't want kids</td>\n",
+       "      <td>straight</td>\n",
+       "      <td>likes cats</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>pisces</td>\n",
+       "      <td>no</td>\n",
+       "      <td>english, german (poorly)</td>\n",
+       "      <td>single</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30</td>\n",
+       "      <td>athletic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>socially</td>\n",
+       "      <td>never</td>\n",
+       "      <td>graduated from college/university</td>\n",
+       "      <td>asian, black, other</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>artistic / musical / writer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>straight</td>\n",
+       "      <td>likes dogs and likes cats</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>aquarius</td>\n",
+       "      <td>no</td>\n",
+       "      <td>english</td>\n",
+       "      <td>single</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age       body_type               diet    drinks      drugs  \\\n",
+       "0   22  a little extra  strictly anything  socially      never   \n",
+       "1   36         average       mostly other     often  sometimes   \n",
+       "2   37            thin           anything  socially        NaN   \n",
+       "3   22            thin         vegetarian  socially        NaN   \n",
+       "4   30        athletic                NaN  socially      never   \n",
+       "\n",
+       "                           education            ethnicity  height  income  \\\n",
+       "0      working on college/university         asian, white    75.0      -1   \n",
+       "1              working on space camp                white    70.0   80000   \n",
+       "2     graduated from masters program                  NaN    68.0      -1   \n",
+       "3      working on college/university                white    71.0   20000   \n",
+       "4  graduated from college/university  asian, black, other    66.0      -1   \n",
+       "\n",
+       "                           job                               offspring  \\\n",
+       "0               transportation  doesn't have kids, but might want them   \n",
+       "1         hospitality / travel  doesn't have kids, but might want them   \n",
+       "2                          NaN                                     NaN   \n",
+       "3                      student                       doesn't want kids   \n",
+       "4  artistic / musical / writer                                     NaN   \n",
+       "\n",
+       "  orientation                       pets  \\\n",
+       "0    straight  likes dogs and likes cats   \n",
+       "1    straight  likes dogs and likes cats   \n",
+       "2    straight                   has cats   \n",
+       "3    straight                 likes cats   \n",
+       "4    straight  likes dogs and likes cats   \n",
+       "\n",
+       "                                   religion sex                          sign  \\\n",
+       "0     agnosticism and very serious about it   m                        gemini   \n",
+       "1  agnosticism but not too serious about it   m                        cancer   \n",
+       "2                                       NaN   m  pisces but it doesn't matter   \n",
+       "3                                       NaN   m                        pisces   \n",
+       "4                                       NaN   m                      aquarius   \n",
+       "\n",
+       "      smokes                                             speaks     status  \n",
+       "0  sometimes                                            english     single  \n",
+       "1         no  english (fluently), spanish (poorly), french (...     single  \n",
+       "2         no                               english, french, c++  available  \n",
+       "3         no                           english, german (poorly)     single  \n",
+       "4         no                                            english     single  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "csv_path = \"Resources/profiles_revised_Mar_29.csv\"\n"
+    "# Raw data file\n",
+    "file_to_load = \"Resorces/profiles_revised_Mar_29.csv\"\n",
+    "\n",
+    "# Read purchasing file and store into pandas data frame\n",
+    "df= pd.read_csv(file_to_load)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9273278b",
+   "id": "5b44ea44",
    "metadata": {},
    "outputs": [],
    "source": []
