--- a/OKcupidon Data.ipynb
+++ b/OKcupidon Data.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "8e813d5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_3228/303455668.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\sarma\\AppData\\Local\\Temp/ipykernel_3228/303455668.py\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    import Sunburst from sunburst-chart\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
