--- a/OKcupidon Data-R.ipynb
+++ b/OKcupidon Data-R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8e813d5a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "79220179",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "4         no                                            english     single  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "eb68ff33",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,6 @@
        "      <th>smokes</th>\n",
        "      <th>speaks</th>\n",
        "      <th>status</th>\n",
-       "      <th>signcleaned</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -311,7 +310,6 @@
        "      <td>sometimes</td>\n",
        "      <td>english</td>\n",
        "      <td>single</td>\n",
-       "      <td>gemini</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -334,7 +332,6 @@
        "      <td>no</td>\n",
        "      <td>english (fluently), spanish (poorly), french (...</td>\n",
        "      <td>single</td>\n",
-       "      <td>cancer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -357,7 +354,6 @@
        "      <td>no</td>\n",
        "      <td>english, french, c++</td>\n",
        "      <td>available</td>\n",
-       "      <td>pisces</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -380,7 +376,6 @@
        "      <td>no</td>\n",
        "      <td>english, german (poorly)</td>\n",
        "      <td>single</td>\n",
-       "      <td>pisces</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -403,11 +398,9 @@
        "      <td>no</td>\n",
        "      <td>english</td>\n",
        "      <td>single</td>\n",
-       "      <td>aquarius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -449,7 +442,6 @@
        "      <td>no</td>\n",
        "      <td>english</td>\n",
        "      <td>single</td>\n",
-       "      <td>cancer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59942</th>\n",
@@ -472,7 +464,6 @@
        "      <td>no</td>\n",
        "      <td>english (fluently)</td>\n",
        "      <td>single</td>\n",
-       "      <td>leo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59943</th>\n",
@@ -495,7 +486,6 @@
        "      <td>no</td>\n",
        "      <td>english (fluently)</td>\n",
        "      <td>single</td>\n",
-       "      <td>sagittarius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59944</th>\n",
@@ -518,7 +508,6 @@
        "      <td>trying to quit</td>\n",
        "      <td>english (fluently), spanish (poorly), chinese ...</td>\n",
        "      <td>single</td>\n",
-       "      <td>leo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59945</th>\n",
@@ -541,11 +530,10 @@
        "      <td>sometimes</td>\n",
        "      <td>english</td>\n",
        "      <td>single</td>\n",
-       "      <td>gemini</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>59944 rows × 20 columns</p>\n",
+       "<p>59944 rows × 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -627,36 +615,23 @@
        "59944   m          leo  trying to quit   \n",
        "59945   m       gemini       sometimes   \n",
        "\n",
-       "                                                  speaks     status  \\\n",
-       "0                                                english     single   \n",
-       "1      english (fluently), spanish (poorly), french (...     single   \n",
-       "2                                   english, french, c++  available   \n",
-       "3                               english, german (poorly)     single   \n",
-       "4                                                english     single   \n",
-       "...                                                  ...        ...   \n",
-       "59941                                            english     single   \n",
-       "59942                                 english (fluently)     single   \n",
-       "59943                                 english (fluently)     single   \n",
-       "59944  english (fluently), spanish (poorly), chinese ...     single   \n",
-       "59945                                            english     single   \n",
+       "                                                  speaks     status  \n",
+       "0                                                english     single  \n",
+       "1      english (fluently), spanish (poorly), french (...     single  \n",
+       "2                                   english, french, c++  available  \n",
+       "3                               english, german (poorly)     single  \n",
+       "4                                                english     single  \n",
+       "...                                                  ...        ...  \n",
+       "59941                                            english     single  \n",
+       "59942                                 english (fluently)     single  \n",
+       "59943                                 english (fluently)     single  \n",
+       "59944  english (fluently), spanish (poorly), chinese ...     single  \n",
+       "59945                                            english     single  \n",
        "\n",
-       "       signcleaned  \n",
-       "0           gemini  \n",
-       "1           cancer  \n",
-       "2           pisces  \n",
-       "3           pisces  \n",
-       "4         aquarius  \n",
-       "...            ...  \n",
-       "59941       cancer  \n",
-       "59942          leo  \n",
-       "59943  sagittarius  \n",
-       "59944          leo  \n",
-       "59945       gemini  \n",
-       "\n",
-       "[59944 rows x 20 columns]"
+       "[59944 rows x 19 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,7 +1868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
